src/objects/SW_Experiences_and_Releases__c.object
<CustomObject>
    <fields>
        <fullName>Security_Review_Comments1__c</fullName>
        <description>Requested by Privacy team</description>
        <label>Security Review Comments1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Security_Review_Comments2__c</fullName>
        <label>Security Review Comments2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Security_Review_Comments3__c</fullName>
        <label>Security Review Comments3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Security_Review_Status1__c</fullName>
        <description>Additional field for the Privacy team</description>
        <label>Security Review Status1</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Security_Review_Status2__c</fullName>
        <label>Security Review Status2</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Security_Review_Status3__c</fullName>
        <label>Security Review Status3</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Security_Review_URL1__c</fullName>
        <label>Security Review URL1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Security_Review_URL2__c</fullName>
        <label>Security Review URL2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Security_Review_URL3__c</fullName>
        <label>Security Review URL3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Security_Risk_Level1__c</fullName>
        <inlineHelpText>S0 = Critical/Code Review 
S1 = Critical 
S2 = High 
S3 = Medium 
S4 = Low 
S5 = Security Trivial</inlineHelpText>
        <label>Security Risk Level1</label>
        <picklist>
            <picklistValues>
                <fullName>S0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Security_Risk_Level2__c</fullName>
        <inlineHelpText>S0 = Critical/Code Review 
S1 = Critical 
S2 = High 
S3 = Medium 
S4 = Low 
S5 = Security Trivial</inlineHelpText>
        <label>Security Risk Level2</label>
        <picklist>
            <picklistValues>
                <fullName>S0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Security_Risk_Level3__c</fullName>
        <inlineHelpText>S0 = Critical/Code Review 
S1 = Critical 
S2 = High 
S3 = Medium 
S4 = Low 
S5 = Security Trivial</inlineHelpText>
        <label>Security Risk Level3</label>
        <picklist>
            <picklistValues>
                <fullName>S0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Software_PRD_Link_2__c</fullName>
        <inlineHelpText>Please enter any additional PRD links (if any)</inlineHelpText>
        <label>Overview/Summary Deck</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Software_PRD_Link_3__c</fullName>
        <inlineHelpText>Please enter any additional PRD links (if any)</inlineHelpText>
        <label>Competitive Deck</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Software_PRD_Link_4__c</fullName>
        <description>Specific field for use by D. Schuster, in POR chart</description>
        <inlineHelpText>Specific field for use by D. Schuster, in POR chart</inlineHelpText>
        <label>Product Backlog</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Software_PRD_Link__c</fullName>
        <description>Software PRD Link</description>
        <inlineHelpText>Please enter the URL to the Software PRD Google Doc</inlineHelpText>
        <label>Product Description</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Spend_Delta__c</fullName>
        <formula>Projected_Spend__c - Actual_Spend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Spend Delta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status_Indicator__c</fullName>
        <formula>IF(text(Status__c) = &quot;Canceled&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01540000000VlHw&quot;, &quot;Red&quot;), 
IF( OR( text(Status__c) = &quot;Behind Plan&quot;, text(Status__c) = &quot;Pending&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=01540000000VlI1&quot;, &quot;Yellow&quot;), 
IF( OR( text(Status__c) = &quot;On Plan&quot;, text(Status__c) = &quot;Commit&quot;, text(Status__c) = &quot;Approved&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=01540000000VlI6&quot;, &quot;Green&quot;), 
IF(OR( text(Status__c) = &quot;Limited SA&quot;, text(Status__c) = &quot;Not Committed&quot;, text(Status__c) = &quot;New&quot;, text(Status__c) = &quot;Evaluate&quot;, text(Status__c) = &quot;Pursue&quot;, text(Status__c) == &quot;Dropped&quot; ) , IMAGE(&quot;/servlet/servlet.FileDownload?file=01540000000VlO9&quot;, &quot;Clear&quot;), 
&quot;&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Overall Status</label>
        <picklist>
            <picklistValues>
                <fullName>Discovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behind Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TA_Date__c</fullName>
        <label>Earliest TA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>text(SW_Project__r.Type__c)</formula>
        <inlineHelpText>From Parent record</inlineHelpText>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1_pager__c</fullName>
        <label>1-pager</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <picklist>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>SW Experiences and Releases</label>
    <listViews>
        <fullName>Experiences_POR_Grouping_for_Dave</fullName>
        <columns>Product_Area1__c</columns>
        <columns>SW_Project__c</columns>
        <columns>NAME</columns>
        <columns>POR_Status__c</columns>
        <columns>Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Experiences</value>
        </filters>
        <filters>
            <field>POR_Status__c</field>
            <operation>notEqual</operation>
            <value>,OUT,Exclude from POR Chart</value>
        </filters>
        <label>Experiences Grouping (for Dave)</label>
    </listViews>
    <nameField>
        <label>SW Experiences and Releases Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SW Experiences and Releases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>